update: fix java22+ compatibility, fix javadoc